# legal-graph-kb

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.md  experiment_contract.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: legal_metadata.yaml  legal_sources.yaml  predicate_aliases.yaml
data/eval/: academic_metrics.csv  academic_metrics.json  elite_corpus_2024.jsonl  eval_split_hashes.json  judge_cache.jsonl  judge_cache.jsonl.bak_pre_pairfix  metrics.csv  metrics.json  metrics_logic_subset.json  questions_150_test.json  questions_200.json  questions_50_dev.json
data/finetune-bge/: stats.json
data/interim/: structured_law.json
data/logic_lm/: ontology_2024.json
data/processed/: extraction_summary.md  merged_graph.json
data/retrieval_probe/: analyze_zero_recall.py  run_probe.py
docs/: README.md  architecture.md  changelog.md  contributing.md  eval_core.md  experiments.md  known_issues_kg_build.md  neo4j-setup.md  quickstart.md
docs/decisions/: 001_retrieval_k_and_arm.md
docs/diagrams/: render_article_ontology.py  render_kg_pipeline.py  render_logic_lm_hyde_semantic_arm.py  render_logic_lm_hyde_semantic_arm_landscape.py  render_provenance_merge.py
docs/plans/: exp08_followups_and_strict_metric.md  exp09_hyde2_grounded.md  exp11_cypher_walk_retriever.md  exp13_hyde_semantic.md  hyde_gpt4o_mini.md  hyde_qwen_colab.md  logic_lm_hyde_semantic.md  split_experiment.md  ui_logic_lm_chatbot.md  ui_logic_lm_chatbot_mockup.html  v5_general_retrieval.md  v5_sprint2_implementation.md  v5_sprint2_summary.md
elite/cli/: answer_with_program.py  build_bhxh_ontology.py  query_ontology.py
elite/data/: corpus_bhxh.jsonl  ontology_bhxh.json
eval_core/: README.md  __init__.py  __main__.py  arms.py  cli.py  experiment.py  gold.py  inference.py  judge.py  metrics.py  multimodel.py  paths.py  report.py  rerender.py  retrieval_metrics.py  runners.py  text_normalize.py
eval_core/samples/: README.md
evaluation/: __init__.py  compute_academic_metrics.py  compute_judge_metrics.py  validate_gold_citations.py
evaluation/samples/: README.md  records.json
experiments/: README.md  arms.py  audit_apply_fixes.py  audit_apply_fixes_v2.py  audit_reaggregate.py  audit_repair_pairwise.py  build_elite_corpus_2024.py  build_logic_lm_corpus_2024.py  compute_academic_metrics.py  compute_judge_metrics.py  compute_metrics.py  compute_multimodel_metrics.py  compute_significance.py  elite_pipelines.py  extract_logic.py  generate_multimodel_report.py  generate_report.py  graphrag_retriever_adapter.py  llm_only.py  load_extracted_logic.py  logic_lm_pipelines.py  rerender_plain_answer.py  run_inference.py  run_multimodel_inference.py  text_normalize.py  validate_extraction.py  validate_gold_citations.py
experiments/01_initial_eval/: .gitignore  README.md  config.yaml
experiments/02_logic_lm_hyde_semantic/: .gitignore  README.md  config.yaml  questions_50_seed42.json
experiments/02_smoke_test_after_data_migration/: README.md  config.yaml
experiments/03_v5_sprint1_vanilla/: README.md  config.yaml
experiments/04_v5_sprint2_m2/: .gitignore  README.md  config.yaml  run_log.txt
experiments/05_v5_retrieval_audit/: README.md  stage_a_results.json  stage_analysis_baseline_m2.json
experiments/06_retrieval_dense_vs_full/: .gitignore  README.md  config.yaml
experiments/07_retrieval_extended_k/: README.md  config.yaml
experiments/08_hyde_retrieval/: README.md  config.yaml
experiments/09_hyde2_grounded/: README.md  config.yaml
experiments/10_hyde_gracer/: .gitignore  README.md  config.yaml
experiments/11_graphrag_cypher/: .gitignore  README.md  config.yaml
notebooks/: 01_colab_setup.ipynb  02_colab_inference.ipynb  03_colab_metrics_report.ipynb  README.md  colab_full_pipeline.ipynb  colab_r1_5arm.ipynb  colab_r2_multimodel.ipynb  debug_phase2_failure.md  exp08_hyde_colab.ipynb  finetune_bge_m3.ipynb
offline/: __init__.py  build_logic_lm_corpus_2024.py  build_ontology.py  build_ontology_kg.py  build_synthetic_qa.py  embed.py  extract_prolog.py  llm_extract.py  load_neo4j.py  load_prolog.py  merge_normalize.py  parse_docx.py  rule_extract.py  validate_prolog.py
prompts/: extract_v1.md
reports/: FINAL_REPORT.md  experiment_report.md  extraction_summary.md  methodology_fixes.md  plan_v5_general_retrieval.md
results/: retrieval_audit.json  retrieval_audit_test.json
runtime/: __init__.py  chat.py  graphrag_cypher.py  graphrag_retriever_adapter.py  llm_only.py  logic_lm_pipelines.py  qa_hyde_semantic.py  rag_query.py  rerender_plain_answer.py  run_inference.py  run_multimodel_inference.py
schema/: schema.cypher
scripts/: analyze_retrieval_stages.py  audit_retrieval.py  chat.ps1  exp06_funnel.py  exp06_metrics.py  exp06_run.py  exp07_metrics.py  exp07_run.py  exp08_funnel.py  exp08_metrics.py  exp08_run.py  exp08_test_one.py  exp09_metrics.py  exp09_run.py  exp10_metrics.py  exp10_run.py  exp11_funnel.py  exp11_metrics.py  exp11_run.py  exp12_metrics.py  exp12_run.py  exp13_metrics.py  exp13_run.py  exp14_metrics.py  exp14_run.py  install_b5.ps1  install_bge_m3.ps1  remove_logic_layer.py  reparse_citations.py  retrieval_audit.py  retrieval_audit_analyze.py  run_retrieval_only.py  seal_eval_split.py  ui.ps1  verify_b5.py
src/: bge_m3_loader.py  citations.py  ids.py  legal_metadata.py  legal_prolog_sources.py  llm_extract.py  load_neo4j.py  merge_normalize.py  parse_docx.py  prolog_utils.py  prompts.py  rag_query.py  rule_extract.py  schema.py
tests/: eval_questions.yaml  test_academic_metrics.py  test_embed.py  test_evaluation_sample_metrics.py  test_experiment.py  test_experiment_contract.py  test_experiment_file_placement.py  test_ids.py  test_llm_extract_multilaw.py  test_load_neo4j.py  test_merge_normalize.py  test_parse_docx.py  test_rag_eval.py  test_retrieval_metrics.py  test_rule_extract.py  test_schema.py
ui/: app.py
(+5304 files in other folders)
