# ---------------------------------------------------------------------------
# legal-graph-kb — modern Python project configuration.
# Single source of truth for build, dependencies, tooling.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-graph-kb"
version = "0.1.0"
description = "Knowledge graph + GraphRAG Q&A pipeline cho Luật Bảo hiểm xã hội số 41/2024/QH15 (Vietnamese Social Insurance Law)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Nguyễn Hữu Hoàng", email = "hoangnh.17@grad.uit.edu.vn" },
]
keywords = [
    "legal-nlp", "knowledge-graph", "rag", "graph-rag",
    "neo4j", "vietnamese", "llm", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Vietnamese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Runtime dependencies — pinned tới các version đã verify (xem
# memory/feedback_b5_pin_versions.md cho lý do).
dependencies = [
    # B1 — parse docx
    "python-docx==1.1.2",
    "lxml==5.3.0",

    # Shared schema / validation
    "pydantic==2.9.2",
    "PyYAML==6.0.2",

    # B3 — LLM extraction (OpenAI GPT-4o-mini)
    "openai==1.54.4",
    "tenacity==9.0.0",
    "httpx==0.27.2",

    # B5 — embeddings (BGE-M3). Torch tách riêng vì cần CUDA wheel:
    # `pip install torch==2.6.0 --index-url https://download.pytorch.org/whl/cu124`
    # hoặc chạy `scripts/install_b5.ps1`.
    "sentence-transformers==3.2.1",
    "torch>=2.6.0,<2.7",
    "datasets==3.0.1",

    # B6 — Neo4j
    "neo4j==5.25.0",

    # Tiện ích chung
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "python-dotenv==1.0.1",
    "tqdm==4.66.5",
    "rich==13.9.2",
]

[project.optional-dependencies]
# Dev tooling
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff>=0.6.0,<0.8.0",
    "mypy>=1.11.0,<2.0.0",
]
# Evaluation experiments (experiments/ and evaluation/ folders)
eval = [
    "openpyxl>=3.1.0",
    "bert-score==0.3.12",
]
# All-in-one
all = [
    "legal-graph-kb[dev,eval]",
]

[project.urls]
Homepage      = "https://github.com/USER/legal-graph-kb"
Repository    = "https://github.com/USER/legal-graph-kb"
Issues        = "https://github.com/USER/legal-graph-kb/issues"
Changelog     = "https://github.com/USER/legal-graph-kb/blob/main/docs/changelog.md"

# Console entry points — cho phép gọi `legal-kg-* ...` thay vì `python -m offline.*` /
# `python -m runtime.*`.
[project.scripts]
legal-kg-parse          = "offline.parse_docx:main"
legal-kg-extract-rules  = "offline.rule_extract:main"
legal-kg-extract-llm    = "offline.llm_extract:main"
legal-kg-merge          = "offline.merge_normalize:main"
legal-kg-embed          = "offline.embed:main"
legal-kg-load           = "offline.load_neo4j:main"
legal-kg-ask            = "runtime.rag_query:main"
legal-kg-chat           = "runtime.chat:main"

# ---------------------------------------------------------------------------
# Packaging — `offline/` (build-time) + `runtime/` (inference) + shared `src/`
# (ids, schema, legal_metadata, citations) + `eval_core/` (evaluation infra).
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "offline*", "runtime*", "eval_core*"]
exclude = ["tests*", "scripts*", "docs*", "data*", "reports*", "prompts*", "experiments*"]

[tool.setuptools.package-data]
"src" = ["py.typed"]
"eval_core" = [
    "samples/*.json",
    "samples/*.md",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format (thay cho black + flake8 + isort)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "reports", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "C4",       # comprehensions
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line length — formatter handles
    "B008",     # function call in default arg (FastAPI-style — not used but harmless)
    "SIM108",   # ternary preference
    "RUF001",   # ambiguous unicode chars (intentional trong Vietnamese strings + report)
    "RUF002",   # ambiguous unicode chars in docstrings
    "RUF003",   # ambiguous unicode chars in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",   # late imports OK in test fixtures (Pytest skip conditions)
]
"eval_core/*" = [
    "E402",
    "E701",   # multi-statement line — OK trong research scripts
    "E741",   # ambiguous var name (`l` for llm-only OK trong limited scope)
    "B007",   # unused loop var — OK trong report aggregation
    "B023",   # function in loop captures var — OK khi gọi ngay trong cùng iter
    "RUF005", # list concat — minor style preference
]
"experiments/*" = [
    "E402",
    "E701",
    "E741",
    "B007",
    "B023",
    "RUF005",
]
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: cần Neo4j + OpenAI API + model GPU (skip mặc định trên CI)",
    "slow: chạy lâu (>5s)",
    "live_llm: cần OpenAI API key",
    "live_neo4j: cần Neo4j instance",
]
filterwarnings = [
    "ignore::DeprecationWarning:neo4j.*",
    "ignore::UserWarning:huggingface_hub.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src", "offline", "runtime", "eval_core"]
branch = true
omit = [
    "tests/*",
    "experiments/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Mypy — light config (codebase chưa type-strict)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "experiments.*", "eval_core.*", "scripts.*"]
ignore_errors = true
